# colectric

./: Cargo.toml  README.md  config.yaml
src/: config.rs  main.rs  physics.rs
