[package]
name = "colectric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.9"
geo = "0.26.0"
raqote = "0.8.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
